# kbengine

./: .gitignore  .gitmodules  README.md
.github/workflows/: linux.yml
kbe/src/: CMakeLists.txt  TODO
kbe/src/cmake/: dependency_apr.cmake  dependency_aprutil.cmake  dependency_curl.cmake  dependency_expat.cmake  dependency_fmt.cmake  dependency_g3dlite.cmake  dependency_hiredis.cmake  dependency_jemalloc.cmake  dependency_jwsmtp.cmake  dependency_log4cxx.cmake  dependency_python.cmake  dependency_sigar.cmake  dependency_tinyxml.cmake  dependency_tmxparser.cmake  dependency_zlib.cmake
kbe/src/lib/: CMakeLists.txt
kbe/src/lib/client_lib/: CMakeLists.txt  client_interface.h  client_interface_macros.h  clientapp.cpp  clientapp.h  clientobjectbase.cpp  config.cpp  config.h  entity.cpp  kbemain.h
kbe/src/lib/common/: CMakeLists.txt  appsingleton.h  kbekey.cpp  kbekey.h  singleton.h
kbe/src/lib/db_interface/: CMakeLists.txt  db_interface.cpp  db_interface.h
kbe/src/lib/db_mysql/: CMakeLists.txt  entity_sqlstatement_mapping.cpp  entity_sqlstatement_mapping.h  entity_table_mysql.h
kbe/src/lib/db_redis/: CMakeLists.txt
kbe/src/lib/entitydef/: CMakeLists.txt  common.cpp  datatypes.cpp  entity_macro.h  entitydef.cpp  py_entitydef.cpp  scriptdef_module.cpp
kbe/src/lib/helper/: CMakeLists.txt  debug_helper.cpp  debug_helper.h  sys_info.cpp  sys_info.h
kbe/src/lib/math/: CMakeLists.txt  math.h
kbe/src/lib/navigation/: CMakeLists.txt  navigation.cpp  navigation.h  navigation_mesh_handle.cpp  navigation_tile_handle.cpp  navigation_tile_handle.h
kbe/src/lib/network/: CMakeLists.txt  endpoint.cpp  fixed_messages.cpp  fixed_messages.h  interface_defs.h  message_handler.cpp  network_stats.cpp  network_stats.h  poller_epoll.cpp
kbe/src/lib/pyscript/: CMakeLists.txt  py_compression.cpp  script.cpp  script.h
kbe/src/lib/resmgr/: CMakeLists.txt  resmgr.cpp  resmgr.h  resourceobject.cpp
kbe/src/lib/server/: CMakeLists.txt  common.cpp  components.cpp  components.h  entity_app.h  forward_messagebuffer.cpp  forward_messagebuffer.h  id_component_querier.cpp  kbemain.h  machine_infos.cpp  machine_infos.h  python_app.cpp  python_app.h  serverapp.cpp  serverconfig.cpp  serverconfig.h  signal_handler.cpp  signal_handler.h
kbe/src/lib/thread/: CMakeLists.txt  threadpool.cpp
kbe/src/lib/xml/: CMakeLists.txt
kbe/src/server/: CMakeLists.txt
kbe/src/server/baseapp/: CMakeLists.txt  archiver.cpp  backuper.cpp  baseapp.cpp  baseapp.h  baseapp_interface_macros.h  data_download.cpp  data_downloads.cpp  entity.cpp  entity_autoloader.cpp  entity_messages_forward_handler.cpp  entity_remotemethod.cpp
kbe/src/server/baseappmgr/: CMakeLists.txt  baseappmgr.cpp  baseappmgr.h
kbe/src/server/cellapp/: CMakeLists.txt  cellapp.cpp  cellapp.h  spacememory.cpp
kbe/src/server/cellappmgr/: CMakeLists.txt  cellappmgr.cpp  cellappmgr.h
kbe/src/server/dbmgr/: CMakeLists.txt  dbmgr.cpp  dbmgr.h
kbe/src/server/loginapp/: CMakeLists.txt  clientsdk_downloader.cpp  clientsdk_downloader.h  loginapp.cpp  loginapp.h
kbe/src/server/machine/: CMakeLists.txt  machine.cpp  machine.h
kbe/src/server/tools/: CMakeLists.txt
kbe/src/server/tools/bots/: CMakeLists.txt
kbe/src/server/tools/interfaces/: CMakeLists.txt  interfaces.cpp  interfaces.h
kbe/src/server/tools/kbcmd/: CMakeLists.txt  client_sdk.cpp  kbcmd.cpp  kbcmd.h  main.cpp  server_assets.cpp
kbe/src/server/tools/logger/: CMakeLists.txt  logger.cpp  logger.h
