cmake_minimum_required(VERSION 3.16.0)

# common include directory
include_directories(${KBE_ROOT})
include_directories(${KBE_ROOT}/lib)
include_directories(${KBE_ROOT}/server)
include_directories(${KBE_ROOT}/lib/dependencies)
include_directories(${KBE_ROOT}/lib/dependencies/zlib)
include_directories(${KBE_ROOT}/lib/dependencies/tinyxml)
include_directories(${KBE_ROOT}/lib/dependencies/fmt/include)
include_directories(${KBE_ROOT}/lib/dependencies/curl/include)
include_directories(${KBE_ROOT}/lib/dependencies/log4cxx/src/main/include)
include_directories(${CMAKE_BINARY_DIR}/lib/python/include/python${PYTHON_VERSION})
include_directories(${CMAKE_BINARY_DIR}/lib/dependencies/log4cxx/src/main/include)

link_directories(${CMAKE_BINARY_DIR}/lib/python/lib)

# compile kbengine libs
add_definitions("-DENABLE_WATCHERS")
add_definitions("-DUSE_OPENSSL")
add_subdirectory(client_lib)
add_subdirectory(common)
add_subdirectory(db_redis)
add_subdirectory(db_mysql)
add_subdirectory(db_interface)
add_subdirectory(entitydef)
add_subdirectory(math)
add_subdirectory(resmgr)
add_subdirectory(pyscript)
add_subdirectory(server)
add_subdirectory(navigation)
add_subdirectory(network)
add_subdirectory(helper)
add_subdirectory(thread)
add_subdirectory(xml)