cmake_minimum_required(VERSION 3.16.0)

set(CMAKE_INSTALL_PREFIX "${DEPENDENCIES_INSTALL_DIR}")

add_subdirectory(client_lib)
add_subdirectory(common)
add_subdirectory(db_redis)
add_subdirectory(db_mysql)
add_subdirectory(db_interface)
add_subdirectory(entitydef)
add_subdirectory(math)
add_subdirectory(resmgr)
add_subdirectory(pyscript)
add_subdirectory(navigation)
add_subdirectory(network)
add_subdirectory(helper)
add_subdirectory(thread)
add_subdirectory(xml)
add_subdirectory(server)