cmake_minimum_required(VERSION 3.16.0)

project(entitydef)

file(GLOB_RECURSE ENTITYDEF_SRCS "*.h" "*.cpp")

add_library(${PROJECT_NAME} SHARED ${ENTITYDEF_SRCS})
target_link_libraries(${PROJECT_NAME} client_lib ${LIBS_LINK_LIBRARIES})

# install headers
if (NOT EXISTS ${CMAKE_INSTALL_PREFIX}/include)
  file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/include)
endif()

install(TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}-targets
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)