cmake_minimum_required(VERSION 3.16.0)

project(baseapp)

file(GLOB_RECURSE BASEAPP_SRCS "*.h" "*.cpp")

add_executable(${PROJECT_NAME} ${BASEAPP_SRCS})

message(STATUS "baseapp link ${EXECUTABLE_LINK_LIBRARIES}")
target_link_libraries(${PROJECT_NAME} PRIVATE ${EXECUTABLE_LINK_LIBRARIES})

install(TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}-targets
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)